kitty: add tabs shortcuts

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,3 +1,5 @@
+confirm_os_window_close 0
+
 font_family FiraCode Nerd Font
 bold_font auto
 italic_font auto
@@ -93,5 +95,7 @@ map alt+shift+k scroll_page_up
 
 map kitty_mod+w close_tab
 
+map ctrl+t new_tab
+map ctrl+w close_tab
 map kitty_mod+j next_tab
 map kitty_mod+k previous_tab
