--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,6 +1,6 @@
 confirm_os_window_close 0
 
-font_family FiraCode Nerd Font
+font_family monospace
 bold_font auto
 italic_font auto
 bold_italic_font auto
