--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -95,7 +95,7 @@ map alt+shift+k scroll_page_up
 
 map kitty_mod+w close_tab
 
-map ctrl+t new_tab
+map ctrl+t new_tab_with_cwd
 map ctrl+w close_tab
 map kitty_mod+j next_tab
 map kitty_mod+k previous_tab
