--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -93,9 +93,8 @@ map alt+k scroll_line_up
 map alt+shift+j scroll_page_down
 map alt+shift+k scroll_page_up
 
-map kitty_mod+w close_tab
 
-map ctrl+t new_tab_with_cwd
-map ctrl+w close_tab
+map kitty_mod+t new_tab_with_cwd
+map kitty_mod+w close_tab
 map kitty_mod+j next_tab
 map kitty_mod+k previous_tab
