--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,5 +1,7 @@
-set -ga terminal-overrides ",screen-256color*:Tc"
-set-option -g default-terminal "screen-256color"
+set -as terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[2 q'
+# set -ga terminal-overrides ",screen-256color*:Tc"
+set -ga terminal-overrides ",xterm-256color*:Tc"
+set-option -g default-terminal "xterm-256color"
 set -s escape-time 0
 
 unbind C-b
